fix matchServiceTest and matchRestControllerTest